// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invitationComponentForElement function ownInvitation False 1`] = `
<LHCButton
  onSelected={[Function]}
>
  <Text>
    ID
    1
  </Text>
  <Text>
    FROM
    a
  </Text>
  <Text>
    TO
    a
  </Text>
  <Text>
    REASON
    c
  </Text>
  <Text>
    STATUS
    New
  </Text>
</LHCButton>
`;

exports[`invitationComponentForElement function ownInvitation True 1`] = `
<LHCButton
  onSelected={[Function]}
>
  <Text>
    ID
    1
  </Text>
  <Text>
    FROM
    a
  </Text>
  <Text>
    TO
    a
  </Text>
  <Text>
    REASON
    c
  </Text>
  <Text>
    STATUS
    New
  </Text>
</LHCButton>
`;

exports[`should display HomeScreen with Entries 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <FlatList
    data={
      Array [
        <Text>
          No Invitations. Go to Browse Screen to find a new person to meet
        </Text>,
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`should display HomeScreen with no Entries 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <FlatList
    data={
      Array [
        <Text>
          No Invitations. Go to Browse Screen to find a new person to meet
        </Text>,
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`should display HomeScreen with no errors 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#2c3e50",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        <Text>
          No Invitations. Go to Browse Screen to find a new person to meet
        </Text>,
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <Text>
          No Invitations. Go to Browse Screen to find a new person to meet
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
